Fixed footer CTA spacing

--- a/_scss/cta.scss
+++ b/_scss/cta.scss
@@ -27,7 +27,7 @@
 			}
 		}
 		.cta-content {
-			padding: $space-2xl 0;
+			padding: $space-3xl 0;
 			h2, .body-lg {
 				max-width: 500px;
 			}
